--- a/blog-user/src/assets/theam.css
+++ b/blog-user/src/assets/theam.css
@@ -4,7 +4,7 @@
     --hover-background-color: #c3fae8;
     --active-background-color: #96f2d7;
 
-
+    --theme:#c3fae8;
     --border-color: #d2d0d0;
     --card-border-shadow: 0px 0px 3px #ccc;
     --dash-border-color: #eaeaea;
