--- a/blog-user/src/assets/main.css
+++ b/blog-user/src/assets/main.css
@@ -27,6 +27,7 @@
     .page-main-container {
         width: 60%;
         margin-left: 20%;
+        margin-right: 20%;
     }
     *{
         font-size: 20px
