--- a/blog-user/src/assets/main.css
+++ b/blog-user/src/assets/main.css
@@ -15,7 +15,7 @@
 }
 @font-face {
     font-family: 'ZFont';
-    src: url("https://gcore.jsdelivr.net/gh/cayzlh/psychic-potato@master/font/zfont/ZFonts.woff2");
+    src: url("../../public/ZFonts.woff2");
     font-display: swap;
     font-weight: normal;
     font-style: normal;
